# open5gs

./: .gitignore
configs/: non3gpp.yaml.in
configs/freeDiameter/: aaa.conf.in  hss.conf.in  meson.build  smf.conf.in
configs/logrotate/: open5gs.in
configs/newsyslog/: open5gs.conf.in
configs/open5gs/: aaa.yaml.in  meson.build
configs/open5gs/tls/: aaa.crt  aaa.csr  aaa.key  meson.build
configs/systemd/: open5gs-aaad.service.in
debian/: open5gs-aaa.install
docker/: docker-compose.yml
lib/app/: ogs-app.h
lib/tun/: linux-setup.c
misc/: make-certs.sh
src/: meson.build
src/aaa/: aaa-context.c  aaa-context.h  aaa-fd-path.c  aaa-fd-path.h  aaa-init.c  aaa-s6b-path.c  aaa-s6b-path.h  aaa-swx-path.c  aaa-swx-path.h  app-init.c  meson.build
src/mme/: mme-fd-path.c
src/smf/: fd-path.c  fd-path.h  gx-path.c  gy-path.c  s6b-path.c
tests/non3gpp/: abts-main.c  epdg-test.c  test-fd-path.c
webui/: package-lock.json  package.json
